--- a/README.mkd
+++ b/README.mkd
@@ -1,13 +1,6 @@
 # Napkin v1.5
 
-These are the source files for Evan Chen's *An Infinitely Large Napkin*.
-You can read about the project on my [webpage](http://web.evanchen.cc/napkin.html).
-
-### Download
-You can download the [*most recent PDF*](https://venhance.github.io/napkin/Napkin.pdf)
-or [generated log files](https://venhance.github.io/napkin/).
-(Thanks to [aDotInTheVoid](https://github.com/aDotInTheVoid)
-for helping me set up the Travis CI to automate this process!)
+ess!)
 
 ### Code
 The project can be compiled on a system supporting `latexmk` and `asymptote`,
